---------------------------------------------
- Wonder Scale Website                      -
---------------------------------------------

- v1.0.1050                                 -
---------------------------------------------
- 2020-11-17                                -
---------------------------------------------
.: WSW: Task: Update SEO (WSW-38)

---------------------------------------------
- 2020-11-17                                -
---------------------------------------------
.: WSW: Task: Change Icon (WSW-89)

---------------------------------------------
- 2020-11-17                                -
---------------------------------------------
.: WSW: Task: Share QR code with social media (WSW-38)

---------------------------------------------
- 2020-11-16                                -
---------------------------------------------
.: WSW: Task: Googling Menu (WSW-32)

---------------------------------------------
- 2020-11-08                                -
---------------------------------------------
.: WSW: Task: Create build bot (WSW-84)
.: WSN: Task: Add Social Media (WSM-52)
.: WSW: Task: CLONE - Add an preferable order method (WSW-88)

---------------------------------------------
- 2020-11-06                                -
---------------------------------------------
.: WSW: Task: CLONE - Standardize button colors (WSW-86)
.: WSW: Task: CLONE - Standardize loading (WSW-87)

---------------------------------------------
- 2020-11-04                                -
---------------------------------------------
.: WSM: Task: Icon in QRcode is too blur (WSM-219)
.: WSW: BugFix: Image is stretched when modal is opened (WSW-85)

- v1.0.1040                                 -
---------------------------------------------
- 2020-11-01                                -
---------------------------------------------
.: WSM: Task: Prevent caching issue (WSM-221)
.: WSW: FixBug: Remove feature editing button (WSW-81)