@@ -1,20 +1,0 @@
-[
-  {
-    "username": "vresthotel52",
-    "title": "Vrest Hotel",
-    "profileImage": "upload/shop_thumbnails/64701595148292870.png",
-    "description": "Hotel Vrest Melaka is located just 5-minute drive away from famous Jonker Street, Mahkota Parade Shopping Mall Museum.\nHotel decorated with a minimalist approach design.\nStay at Vrest Hotel in Heart of Melaka."
-  },
-  {
-    "username": "testshop",
-    "title": "Test Shop",
-    "profileImage": null,
-    "description": null
-  },
-  {
-    "username": "foodpalatte",
-    "title": "Food Palatte",
-    "profileImage": "upload/shop_thumbnails/92121604146026372.png",
-    "description": ""
-  }
-]
