@@ -4,12 +4,22 @@
 
 - v1.0.1050                                 -
 ---------------------------------------------
-- 2020-11-17                                -
+- 2020-12-05                                -
+---------------------------------------------
+.: WSW: Task: Update twitter meta (WSW-84)
+
+---------------------------------------------
+- 2020-12-05                                -
+---------------------------------------------
+.: WSW: Task: Create Buildbot (WSW-84)
+
+---------------------------------------------
+- 2020-12-04                                -
 ---------------------------------------------
 .: WSW: Task: Update SEO (WSW-38)
 
 ---------------------------------------------
-- 2020-11-17                                -
+- 2020-12-03                                -
 ---------------------------------------------
 .: WSW: Task: Change Icon (WSW-89)
 
